[package]
name = "recurring-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
bb8 = "0.8"
bb8-postgres = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bb8-diesel = "0.2.1"
async-trait = "0.1.24"
diesel = { version = "2.0", default-features = false, features = [ "r2d2", "i-implement-a-third-party-backend-and-opt-into-breaking-changes" ] }
